--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,12 @@
 name = "layout-rs"
 version = "0.1.0"
 edition = "2021"
-description = "Template for starting a Yew project using Trunk"
+description = "A Rust-based keyboard layout application"
 readme = "README.md"
-repository = "https://github.com/yewstack/yew-trunk-minimal-template"
+repository = "https://github.com/gaarutyunov/layout-rs"
 license = "MIT OR Apache-2.0"
 keywords = ["yew", "trunk"]
-categories = ["gui", "wasm", "web-programming"]
+categories = ["gui", "wasm", "web-programming", "dactyl-manuform", "keyboard-layout"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
