--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ gloo = "0.11"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 wasm-bindgen = "0.2"
+once_cell = "1.19"
+paste = "1.0.15"
